config (maven) : add --enable-preview compiler parameter
This is to allow java 12 improved switch